[gd_scene load_steps=31 format=3 uid="uid://chnbfg73cafw5"]

[ext_resource type="Script" path="res://Scripts/officer.gd" id="1_bdche"]
[ext_resource type="Texture2D" uid="uid://sf4oppl1ep16" path="res://Assets/officer/officer_walk_strip.png" id="1_rapbw"]
[ext_resource type="Texture2D" uid="uid://ceoewdq64hb44" path="res://Assets/officer/officer_die_strip.png" id="3_fj5uk"]
[ext_resource type="Texture2D" uid="uid://drmxdcpd00q0d" path="res://Assets/officer/officer_headless_strip.png" id="4_6sqg5"]
[ext_resource type="Texture2D" uid="uid://nibcflpwsr3q" path="res://Assets/officer/officer_shoot_strip.png" id="5_j4gxy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r7pq6"]
atlas = ExtResource("1_rapbw")
region = Rect2(0, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmw6s"]
atlas = ExtResource("1_rapbw")
region = Rect2(32, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_nts07"]
atlas = ExtResource("1_rapbw")
region = Rect2(64, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_t005o"]
atlas = ExtResource("1_rapbw")
region = Rect2(96, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq1ab"]
atlas = ExtResource("1_rapbw")
region = Rect2(128, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyx1l"]
atlas = ExtResource("1_rapbw")
region = Rect2(160, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_enqpx"]
atlas = ExtResource("1_rapbw")
region = Rect2(192, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6dgc"]
atlas = ExtResource("1_rapbw")
region = Rect2(224, 0, 32, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3ha5"]
atlas = ExtResource("3_fj5uk")
region = Rect2(0, 0, 49, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_pixid"]
atlas = ExtResource("3_fj5uk")
region = Rect2(49, 0, 49, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqcab"]
atlas = ExtResource("3_fj5uk")
region = Rect2(98, 0, 49, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfbjj"]
atlas = ExtResource("3_fj5uk")
region = Rect2(147, 0, 49, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3wc4"]
atlas = ExtResource("4_6sqg5")
region = Rect2(0, 0, 46, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_65lf6"]
atlas = ExtResource("4_6sqg5")
region = Rect2(46, 0, 46, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_codqt"]
atlas = ExtResource("4_6sqg5")
region = Rect2(92, 0, 46, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_kml3h"]
atlas = ExtResource("4_6sqg5")
region = Rect2(138, 0, 46, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr3uu"]
atlas = ExtResource("5_j4gxy")
region = Rect2(0, 0, 38, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_je5cu"]
atlas = ExtResource("5_j4gxy")
region = Rect2(38, 0, 38, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n0vs"]
atlas = ExtResource("5_j4gxy")
region = Rect2(76, 0, 38, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s1mb"]
atlas = ExtResource("5_j4gxy")
region = Rect2(114, 0, 38, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x5m6"]
atlas = ExtResource("5_j4gxy")
region = Rect2(152, 0, 38, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_altc6"]
atlas = ExtResource("5_j4gxy")
region = Rect2(190, 0, 38, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_xawq0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7pq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmw6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nts07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t005o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq1ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyx1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enqpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6dgc")
}],
"loop": false,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3ha5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pixid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqcab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfbjj")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3wc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65lf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_codqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kml3h")
}],
"loop": false,
"name": &"death2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr3uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je5cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n0vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s1mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x5m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_altc6")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l1oll"]
radius = 27.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_opojc"]
radius = 33.0
height = 104.0

[node name="officer" type="CharacterBody2D"]
script = ExtResource("1_bdche")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.2, 3.2)
sprite_frames = SubResource("SpriteFrames_xawq0")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_l1oll")

[node name="Marker2DFrontOfficer" type="Marker2D" parent="."]
position = Vector2(58, 3)

[node name="Area2Dofficer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Dofficer"]
shape = SubResource("CapsuleShape2D_opojc")

[connection signal="area_entered" from="Area2Dofficer" to="." method="_on_area_2_dofficer_area_entered"]
